--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyDevelopmentHouse</title>
     <!-- <base href="/DevelopmentHouse/" />  -->
-    <base href="/" />
+    <!-- <base href="/" />-->
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="MyDevelopmentHouse.styles.css" />
     <link rel="icon" href="Logo/Logo.jpg" type="image/png" />
