--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyDevelopmentHouse</title>
-    <!--<base href="/DevelopmentHouse/" /> -->
-    <base href="/" />
+    <!-- --><base href="/DevelopmentHouse/" />
     <!-- <base href="/" />-->
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="MyDevelopmentHouse.styles.css" />
