added meta data

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,10 +7,32 @@
     <title>MyDevelopmentHouse</title>
     <!--  -->
     <!--  <base href="/" />-->
-    <base href="/DevelopmentHouse/"/>
+    <base href="/DevelopmentHouse/" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="MyDevelopmentHouse.styles.css" />
     <link rel="icon" href="Logo/Logo.jpg" type="image/png" />
+
+    <!-- Описание сайта (на английском и русском) -->
+    <meta name="description" content="Simple one-page website showcasing a clean. / Простая визитка.">
+    <!-- Ключевые слова -->
+    <meta name="keywords" content="landing page, one-page website, portfolio, personal site, визитка, сайт-визитка">
+    <!-- Инструкции для поисковых роботов -->
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Simple Landing Page / Визитка">
+    <meta property="og:description" content="Simple one-page website showcasing a clean. / Простой сайт визитка.">
+    <meta property="og:url" content="https://neroimor.github.io/DevelopmentHouse/">
+    <!--Превью-изображение -->
+    <meta property="og:image" content="https://neroimor.github.io/DevelopmentHouse/Logo/Logo.jpg">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card теги -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Simple Landing Page / Визитка">
+    <meta name="twitter:description" content="Simple one-page website showcasing a clean, modern design. / Простая визитка с современным дизайном.">
+    <!-- Замените путь ниже на ссылку на ваше изображение для Twitter -->
+    <meta name="twitter:image" content="https://neroimor.github.io/DevelopmentHouse/Logo/Logo.jpg">
+    <link rel="icon" type="image/jpeg" href="icon.jpg">
+
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="My development house.styles.css" rel="stylesheet" /> -->
 </head>
